tests/ui/untrusted_pairs.stderr
error[E0277]: the trait bound `std::array::IntoIter<RangeInclusive<{integer}>, 3>: SortedDisjoint<_>` is not satisfied
 --> tests/ui/untrusted_pairs.rs:7:62
  |
7 |     let _range_set_int = RangeSetBlaze::from_sorted_disjoint(not_guaranteed); // nope
  |                          ----------------------------------- ^^^^^^^^^^^^^^ the trait `SortedDisjoint<_>` is not implemented for `std::array::IntoIter<RangeInclusive<{integer}>, 3>`
  |                          |
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `SortedDisjoint<T>`:
            CheckSortedDisjoint<T, I>
            DynSortedDisjoint<'a, T>
            IntoRangesIter<T>
            NotIter<T, I>
            RangesIter<'_, T>
            UnionIter<T, I>
            itertools::tee::Tee<I>
note: required by a bound in `RangeSetBlaze::<T>::from_sorted_disjoint`
 --> src/lib.rs
  |
  |         I: SortedDisjoint<T>,
  |            ^^^^^^^^^^^^^^^^^ required by this bound in `RangeSetBlaze::<T>::from_sorted_disjoint`
